# ClawsomeFlow

./: .gitignore  CHANGELOG.md  pytest.ini  readme.md  readme.zh.md
backend/: pyproject.toml
backend/app/: __init__.py  board_proxy.py  bootstrap.py  concurrency.py  concurrency_server.py  config.py  deployment.py  events.py  fileutil.py  flow_modes.py  logging_setup.py  main.py  models.py  operations.py  paths.py  repo_merge_lock.py  runtime_bins.py  static.py  upgrade.py  user_context.py
backend/app/api/: __init__.py  _api_guard.py  _auth.py  _auth_internal.py  agent_store.py  clawteam_board.py  errors.py  external.py  flows.py  hermes_agents.py  managed_agents.py  openclaw_agents.py  operations.py  profiles.py  runs.py  system.py  task_decompose.py  ws.py
backend/app/cli/: __init__.py  __main__.py  _help.py  _openclaw_runtime.py  _runtime.py  _user_service.py  deps.py  doctor.py  external.py  init.py  logs.py  mcp.py  purge.py  serve.py  start.py  status.py  stop.py  uninstall.py  upgrade.py
backend/app/cli/ops/: __init__.py  _http.py  (+3 more)
backend/app/integrations/: __init__.py  clawteam_alive.py  clawteam_cli.py  clawteam_mcp.py  clawteam_spawn_config.py  git_repo.py  github_store_repo.py  internal_token.py  mcp_compat.py  openclaw_agent_source.py  openclaw_bridge.py  openclaw_cli.py  openclaw_install.py  openclaw_json.py  openclaw_skills.py  opencode_config.py  owner_kind_probe.py  store_server.py  temp_agent_trust.py
backend/app/mcp/: __init__.py  server.py
backend/app/scheduler/: compiler.py  controller.py  engine.py  failure.py  finalize.py  managed_runtime.py  naming.py  prompts.py  providers.py  run_metadata.py
backend/app/services/: __init__.py  agent_branch.py  agent_store.py  chat_attachments.py  chat_retry.py  external_tasks.py  hermes_agents.py  hermes_chat.py  hermes_chat_sessions.py  hermes_dashboard.py  managed_agents.py  mcp_install.py  openclaw_agents.py  openclaw_chat.py  openclaw_chat_history.py  run_notify.py  run_report.py  run_schedules.py  subprocess_registry.py  task_decompose.py  task_decompose_validation.py  update_check.py
backend/app/storage/: __init__.py  server.py  sqlite.py
backend/app/validators/: __init__.py  flow.py
backend/app/worktree/: audit.py  lookup.py
backend/clawsomeflow_agent_tools/: __init__.py
backend/clawsomeflow_openclaw_agent_source/: __init__.py
backend/tests/: conftest.py  test_agent_branch.py  test_api_clawteam_board.py  test_api_flows.py  test_api_full_chain.py  test_api_guard.py  test_api_openclaw_agents.py  test_api_operations.py  test_api_profiles.py  test_api_runs.py  test_api_system.py  test_api_ws.py  test_api_ws_op.py  test_audit_fixes.py  test_auth.py  test_auth_internal.py  test_bootstrap.py  test_chat_attachments.py  test_chat_history_storage.py  test_chat_retry.py  test_clawteam_alive.py  test_clawteam_cli.py  test_clawteam_mcp.py  test_clawteam_mcp_mailbox_fallback.py  test_clawteam_spawn_config.py  test_cli.py  test_cli_phase9.py  test_cli_user_service.py  test_compiler.py  test_concurrency.py  test_config.py  test_cursor_stream_capture.py  test_deployment.py  test_dev_pending_pr.py  test_dispatch_prompts.py  test_event_broadcaster.py  test_external_api.py  test_external_nodes.py  test_failure_detection.py  test_fileutil.py  (+57 more)
(+108 files in other folders)
